@@ -1,3 +1,9 @@
+2008-05-12  Ray Strode  <rstrode@redhat.com>
+
+	* gconf/gconf-internals.c (get_ior):
+	Don't auto launch session bus if we aren't going to
+	auto start gconfd.
+
 2008-05-09  Ray Strode  <rstrode@redhat.com>
 
 	* gconf/gconf-internals.c: (get_ior):
